# ssvsc_test

./: .cproject  .gitignore  .project  .projectlinkstore  blink.c  ssvsc_test.pintool  ssvsc_test.slcp  ssvsc_test.slps  vscode.conf
.pdm/: uc.module.setup.componentSetup.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.componentSetup.com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.debug#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucConfig.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucConfig.com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.debug#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucTemplate.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucTemplate.com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.debug#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj
.uceditor/: .ssvsc_test.dmadrv.cedit  .ssvsc_test.pwmpulse_1.cedit  .ssvsc_test.uartdrv_core.cedit  .ssvsc_test.uartdrv_usartusart_test.cedit
autogen/: .crc_config.crc  sl_component_catalog.h  sl_event_handler.c  sl_pwm_init.c  sl_pwm_instances.h  sl_uartdrv_init.c  sl_uartdrv_instances.h
config/: pin_config.h  sl_pwm_init_pulse_1_config.h  sl_uartdrv_usart_usart_test_config.h
src/: app.c  blink.c
ssvsc_test_cmake/: CMakeLists.txt  CMakePresets.json  ssvsc_test.cmake
